--- a/index.html
+++ b/index.html
@@ -9,23 +9,58 @@
 </head>
 <body>
   <header class="hero">
-    <h1>Hi, I'm Devansh</h1>
-    <p>Computer Science Graduate • Full-Stack Developer • Web Consultant</p>
-    <a href="contact.html" class="cta">Let’s Work Together</a>
-  </header>
+   <div style="background:url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1950&q=80') no-repeat center center; background-size:cover; padding:100px 30px; text-align:center; border-radius:12px; font-family:Arial, sans-serif;">
 
-  <section class="section">
-    <h2>Welcome</h2>
-    <p>I build clean, responsive, and fast websites. With my CS degree and real-world experience, I help individuals and businesses go digital with confidence.</p>
-  </section>
+  <h1 style="font-size:56px; color:white; text-shadow:0 2px 8px rgba(0,0,0,0.7);">
+    Hi, I'm <strong>Devansh</strong>
+  </h1>
 
-  <footer>
-    <p>&copy; 2025 Devansh Punawala</p>
-    <p>
-      <a href="mailto:punawaladevansh@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/devansh-punawala-40ba9a1b9">LinkedIn</a> |
-      <a href="https://github.com/DevanshP5">GitHub</a>
-    </p>
-  </footer>
+  <p style="font-size:22px; max-width:800px; margin:20px auto; color:#eaeaea; text-shadow:0 1px 6px rgba(0,0,0,0.6);">
+    A passionate full-stack developer and Computer Science graduate who transforms ideas into functional, fast, and scalable digital experiences.
+  </p>
+
+  <a href="mailto:punawaladevansh@gmail.com" style="display:inline-block; margin-top:30px; padding:16px 32px; background:#007aff; color:white; border-radius:8px; text-decoration:none; font-size:18px;">
+    Work With Me
+  </a>
+
+</div>
+
+<div style="padding:60px 30px; background:white; font-family:Arial, sans-serif;">
+  <h2 style="text-align:center; color:#111;">👨‍💻 About Me</h2>
+  <p style="max-width:800px; margin:20px auto; font-size:18px; color:#444; line-height:1.7;">
+    I'm Devansh Punawala, a software developer with a degree in Computer Science and a strong technical foundation in backend and full-stack web development. I’ve worked with companies like GAOTek Inc. and Canadian Drone Soccer, where I helped streamline backend systems, improve performance, and assist in live simulations during national events.
+    <br><br>
+    I specialize in building custom websites, backend tools, and scalable architectures using technologies like PHP, Java, React, Node.js, and more. I don’t just write code — I build experiences that are simple, powerful, and easy to use.
+  </p>
+</div>
+
+<div style="padding:60px 30px; background:#f4f7fa; font-family:Arial, sans-serif;">
+  <h2 style="text-align:center; color:#007aff;">🧠 What I'm Great At</h2>
+  <div style="max-width:900px; margin:auto; display:flex; flex-wrap:wrap; gap:40px; justify-content:center;">
+    <div style="flex:1; min-width:250px;">
+      <h3 style="color:#222;">🔧 Full-Stack Dev</h3>
+      <p style="color:#555;">Building from frontend to backend using JavaScript, React, Node.js, PHP, Spring Boot, and SQL.</p>
+    </div>
+    <div style="flex:1; min-width:250px;">
+      <h3 style="color:#222;">⚡ Performance</h3>
+      <p style="color:#555;">I care about speed. Sites I build load fast and work great on every screen size.</p>
+    </div>
+    <div style="flex:1; min-width:250px;">
+      <h3 style="color:#222;">📈 SEO & Structure</h3>
+      <p style="color:#555;">SEO-friendly markup and structure that helps your brand stand out online.</p>
+    </div>
+  </div>
+</div>
+    <footer>
+
+<div style="background-color:#111; color:#ccc; padding:40px 20px; font-family:Arial; text-align:center;">
+  <p style="font-size:16px;">© 2025 Devansh Punawala · Built with 💻 + ☕</p>
+  <p>
+    <a href="mailto:punawaladevansh@gmail.com" style="color:#00aaff; margin:0 10px;">Email</a> |
+    <a href="https://www.linkedin.com/in/devansh-punawala-40ba9a1b9" target="_blank" style="color:#00aaff; margin:0 10px;">LinkedIn</a> |
+    <a href="https://github.com/DevanshP5" target="_blank" style="color:#00aaff; margin:0 10px;">GitHub</a>
+  </p>
+</div>
+      </footer>
 </body>
 </html>
